# esp-embedded

./: Cargo.toml  README.md  rust-toolchain.toml
esp-persistent-config/: Cargo.toml
esp-persistent-config/src/: lib.rs
esp-services/: Cargo.toml
esp-services/src/: dhcp.rs  dns.rs  http.rs  lib.rs  mdns.rs
esp-session-mgmt/: Cargo.toml
esp-session-mgmt/src/: lib.rs
esp-system-api/: Cargo.toml
esp-system-api/src/: lib.rs
esp-web-utils/: Cargo.toml
esp-web-utils/src/: lib.rs
esp-wifi/: Cargo.toml
esp-wifi/src/: config.rs  driver.rs  lib.rs  tasks.rs
