[package]
name = "esp-services"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { workspace = true }
embassy-net = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
esp-hal = { workspace = true }
log = { workspace = true }
picoserve = { workspace = true }
edge-dhcp = { workspace = true }
edge-nal = { workspace = true }
edge-nal-embassy = { workspace = true }
edge-mdns = { workspace = true }
edge-captive = { workspace = true }
static_cell = { workspace = true }


[features]
default = []
esp32 = ["esp-hal/esp32"]
esp32c2 = ["esp-hal/esp32c2"]
esp32c3 = ["esp-hal/esp32c3"]
esp32c6 = ["esp-hal/esp32c6"]
esp32h2 = ["esp-hal/esp32h2"]
esp32s2 = ["esp-hal/esp32s2"]
esp32s3 = ["esp-hal/esp32s3"]
