[package]
name = "esp-wifi"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-net = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
esp-hal = { workspace = true }
esp-radio = { workspace = true }
log = { workspace = true }
static_cell = { workspace = true }
heapless = { workspace = true }
esp-system-api = { path = "../esp-system-api" }
esp-persistent-config = { path = "../esp-persistent-config" }

[features]
default = []
ap = []
sta = []
esp32 = ["esp-hal/esp32", "esp-radio/esp32", "esp-persistent-config/esp32"]
esp32c2 = ["esp-hal/esp32c2", "esp-radio/esp32c2", "esp-persistent-config/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-radio/esp32c3", "esp-persistent-config/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-radio/esp32c6", "esp-persistent-config/esp32c6"]
esp32h2 = ["esp-hal/esp32h2", "esp-radio/esp32h2", "esp-persistent-config/esp32h2"]
esp32s2 = ["esp-hal/esp32s2", "esp-radio/esp32s2", "esp-persistent-config/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-radio/esp32s3", "esp-persistent-config/esp32s3"]
